<?xml version="1.0"?>
<package>
  <name>ursa_driver</name>
  <version>0.1.0</version>
  <description>ros package and c++ library to interface with the URSAII MCA</description>

  <maintainer email="michael.hosmar@uoit.net">Mike Hosmar</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/ursa_driver</url> -->

  <author email="michael.hosmar@uoit.net">Mike Hosmar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>

</package>
